--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+:root {
+  --gold: #f9a826;
+  --wrong-color: #ea8282;
+  --success-color: #60bf88;
+  --dark-blue: #1d355d;
+  --mild-blue: #2f527b;
+  --light-blue: #6066d0;
+
+  --poppins: "Poppins", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
 }
 
-.App-header {
-  background-color: #282c34;
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+img {
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+
+h1 {
+  font-size: 4.8rem;
+  line-height: 7.2rem;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 3.6rem;
+  line-height: 5.4rem;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 2.4rem;
+  line-height: 3.6rem;
+  font-weight: 700;
+}
+
+body {
+  font-family: var(--poppins);
+  background-image: url("images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 3rem 0;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  width: 46.4rem;
+  max-width: 46.4rem;
+  position: relative;
+  margin: 3rem 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.heading {
+  color: #fff;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+
+.logo {
+  position: absolute;
+  width: 12rem;
+  height: 12rem;
+  top: -1rem;
+  left: 71%;
+}
+
+.wrong {
+  color: #fff !important;
+  background-color: var(--wrong-color);
+}
+
+.success {
+  color: #fff !important;
+  background-color: var(--success-color);
+}
+
+@media only screen and (max-width: 600px) {
+
+  .logo {
+    width: 10rem;
+    height: 10rem;
+    top: 3rem;
+    left: 68%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .container {
+    width: 90%;
+    margin: 4rem auto;
   }
 }
